# weather

./: Cargo.toml
src/: api.rs  cli.rs  config.rs  main.rs
src/models/: mod.rs  weather_api.rs
